src/agent/cli/product/tui_app/src/bottom_pane/snapshots/lha_cli__product__tui_app__bottom_pane__tests__queued_messages_visible_when_status_hidden_snapshot.snap
---
source: src/agent/cli/src/../product/tui_app/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit                                  
                                                
› Ask LHA to do anything                        
                                                
  loading · 100% left
