src/agent/cli/product/tui_app/src/bottom_pane/snapshots/lha_cli__product__tui_app__bottom_pane__tests__status_hidden_when_height_too_small_height_1.snap
---
source: src/agent/cli/product/tui_app/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area1)"
---
› Ask LHA to do a
