src/agent/cli/product/tui_app/src/bottom_pane/snapshots/lha_cli__product__tui_app__bottom_pane__tests__status_only_snapshot.snap
---
source: src/agent/cli/src/../product/tui_app/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)               
                                                
                                                
› Ask LHA to do anything                        
                                                
  loading · 100% left
